--- a/music-app/package.json
+++ b/music-app/package.json
@@ -21,7 +21,8 @@
     "redux-immutable": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.1.1",
-    "swiper": "^5.4.5"
+    "swiper": "^5.4.5",
+    "typescript": "^4.4.4"
   },
   "scripts": {
     "start": "react-scripts start",
